--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Clubooks
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}
+spring.datasource.username=root
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+spring.jpa.hibernate.ddl-auto=update
