--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/clubbooks
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.flyway.baseline-on-migrate=true
+spring.data.mongodb.uri=${MONGO_URI}
+spring.jpa.hibernate.ddl-auto=none
