--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Clubooks
 spring.data.mongodb.uri=${MONGO_URI}
-spring.data.mongodb.database=clubook123
+spring.data.mongodb.database=clubook
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
