--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.data.mongodb.database=${DB_MONGO_NAME}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=marllonestudo9@gmail.com
-spring.mail.password=hicpvoskhfozlzcr
+spring.mail.username=${EMAIL}
+spring.mail.password=${APP-PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
